--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 header {
   text-align: center;
   padding: 2rem 1rem;
-  background-color: #4caf50;
+  background-color: #277999ef;
   color: white;
 }
 
