--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 header {
   text-align: center;
   padding: 2rem 1rem;
-  background-color: #40a386;
+  background-color: #29a37f;
   color: white;
 }
 
