--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(to bottom, #8eca87 0%, #d4f5d0 50%, #dbe7ff 50%, #4e75c4 100%);
+  background: linear-gradient(to bottom, #d4f8d0 0%, #d4f5d0 50%, #dbe7ff 50%, #dbe7ff 100%);
   color: #333;
   line-height: 1.6;
 }
@@ -18,7 +18,7 @@ body {
 header {
   text-align: center;
   padding: 2rem 1rem;
-  background-color: #29a37f;
+  background-color: #40a386;
   color: white;
 }
 
