--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 /* Cabeçalho */
 header {
   text-align: center;
-  padding: 2rem 1rem;
-  background-color: #3db351;
+  padding: 3rem 1rem;
+  background-color: #158528;
   color: white;
 }
 
